force-app/main/default/objects/Org_Setting__mdt/fields/Client_side_execution__c.field-meta.xml
<CustomField>
    <fullName>Client_side_execution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client side execution</label>
    <type>Checkbox</type>
</CustomField>