force-app/main/default/objects/Org_Setting__mdt/fields/isSync__c.field-meta.xml
<CustomField>
    <fullName>isSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSync</label>
    <type>Checkbox</type>
</CustomField>